--- a/templates/home.html
+++ b/templates/home.html
@@ -4803,7 +4803,7 @@
 <!-- Image Limit Modal -->
 <div id="imageLimitOverlay" class="image-limit-overlay">
     <div class="image-limit-modal">
-        <h2 class="image-limit-title">Image Limit Reached</h2>
+        <h2 class="image-limit-title">Attachment Limit Reached</h2>
         <p class="image-limit-text">
             With less than 3 credits, you can only attach <strong>1 image at a time</strong>. 
             Upgrade to attach multiple images and unlock unlimited creativity!
