--- a/templates/pricing2.html
+++ b/templates/pricing2.html
@@ -647,7 +647,7 @@
                 images: planImages
             };
 
-            const url = `https://chatezzy.com/nano-banana-checkout?plan=${(planName.toLowerCase())}&token=${(authToken)}`;
+            const url = `https://googlenanobanana.com/nano-banana-checkout?plan=${(planName.toLowerCase())}&token=${(authToken)}`;
 
             showPaymentPopupAndRedirect(url);
         }
