--- a/templates/pricing2.html
+++ b/templates/pricing2.html
@@ -471,7 +471,7 @@
     <div id="paymentPopup">
         <div class="popup-content">
             <h3>Please wait...</h3>
-            <p>We are opening our payment partner <b>Chat Ezzy <br> </br> Registered Under AIN-HUB PVT</b> </p>
+            <p>We are opening checkout Page <b>GoogleNanoBanana.com <br> </br> Registered Under AIN-HUB PVT</b> </p>
             <div class="spinner"></div>
         </div>
     </div>
