--- a/templates/home.html
+++ b/templates/home.html
@@ -5167,7 +5167,7 @@
 
             <!-- <button id="bugReportBtn" class="bug-report-trigger">Report Bug</button> -->
 
-            <button id="bugReportBtn" onclick="window.location.href='/virtual-trial-room'" class="bug-report-trigger"><span class="btn-icon">✨</span> <span>Virtual Trail Room</span></button>
+            <button id="bugReportBtnnn" onclick="window.location.href='/virtual-trial-room'" class="bug-report-trigger"><span class="btn-icon">✨</span> <span>Virtual Trail Room</span></button>
 
              <div class="language-selector">
         <button class="language-btn" onclick="toggleLanguageDropdown()">
