--- a/templates/home.html
+++ b/templates/home.html
@@ -2022,11 +2022,19 @@
     }
 }
 
-@media (max-width: 480px) {
+/*@media (max-width: 480px) {
     .profile-menu {
         right: -95px;
         min-width: 180px;
         max-width: calc(100vw - 130px);
+    }
+}*/
+
+@media (max-width: 480px) {
+    .profile-menu {
+        right: -15px;
+        min-width: 180px;
+        max-width: calc(100vw - 10px);
     }
 }
         /* Responsive adjustments */
