--- a/templates/pricing2.html
+++ b/templates/pricing2.html
@@ -498,6 +498,10 @@
                         <span class="feature-icon">✓</span>
                         <span>100 images included</span>
                     </div>
+                    <div class="feature-item">
+                        <span class="feature-icon">✓</span>
+                        <span>Credits can be used for video generation</span>
+                    </div>
                      <div class="feature-item">
                         <span class="feature-icon">✓</span>
                         <span>Ai Prompt Enhancer</span>
@@ -531,6 +535,10 @@
                         <span class="feature-icon">✓</span>
                         <span>500 images included</span>
                     </div>
+                    <div class="feature-item">
+                        <span class="feature-icon">✓</span>
+                        <span>Credits can be used for video generation</span>
+                    </div>
                      <div class="feature-item">
                         <span class="feature-icon">✓</span>
                         <span>Ai Prompt Enhancer</span>
@@ -562,6 +570,10 @@
                     <div class="feature-item">
                         <span class="feature-icon">✓</span>
                         <span>1000 images included</span>
+                    </div>
+                    <div class="feature-item">
+                        <span class="feature-icon">✓</span>
+                        <span>Credits can be used for video generation</span>
                     </div>
                      <div class="feature-item">
                         <span class="feature-icon">✓</span>
