--- a/templates/pricing2.html
+++ b/templates/pricing2.html
@@ -563,6 +563,7 @@
                 
                 <div class="price-display">$45</div>
                 <div class="image-count">1000 images</div>
+                <div class="image-count" style="font-weight: bold; color: green">$0.045 per image (Best Value!)</div>
                 <div class="bonus-credits premium">+All Prompt Packs</div>
                 <div class="currency-label">(USD)</div>
                 
